force-app/main/default/objects/Host_Application_Response__c/Host_Application_Response__c.object-meta.xml
<CustomObject>
    <description>To keep all the responses returned from Back-End Systems</description>
    <label>Host Application Response</label>
    <nameField>
        <displayFormat>HRH-{YYYY}-{0000}</displayFormat>
        <label>Host Response History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Host Application Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>