force-app/main/default/objects/Host_Application_Response__c/fields/App_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>App_Ref_Number__c</fullName>
    <description>Application Reference Number returned from SLOS</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>หมายเลขอ้างอิง</inlineHelpText>
    <label>App Ref Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>