force-app/main/default/objects/Host_Application_Response__c/fields/Approval_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>วันที่สิ้นสุดของขั้นตอนอนุมัติเครดิต</inlineHelpText>
    <label>Approval End Date</label>
    <type>Date</type>
</CustomField>