force-app/main/default/objects/Host_Application_Response__c/fields/Approval_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Start_Date__c</fullName>
    <description>Date stamp for approval status from SLOS</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>วันที่เริ่มต้นของขั้นตอนอนุมัติเครดิต</inlineHelpText>
    <label>Approval Start Date</label>
    <type>Date</type>
</CustomField>