force-app/main/default/objects/Host_Application_Response__c/fields/CA_Prep_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CA_Prep_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>วันที่สิ้นสุดของขั้นตอน CA Prep</inlineHelpText>
    <label>CA Prep EndDate</label>
    <type>Date</type>
</CustomField>