force-app/main/default/objects/Host_Application_Response__c/fields/CA_Prep_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CA_Prep_Start_Date__c</fullName>
    <description>Date stamp for CA Prep start date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>วันที่เริ่มต้นของขั้นตอน CA Prep</inlineHelpText>
    <label>CA Prep Start Date</label>
    <type>Date</type>
</CustomField>