force-app/main/default/objects/Host_Application_Response__c/fields/CRM_ID__c.field-meta.xml
<CustomField>
    <fullName>CRM_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CRM ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>