force-app/main/default/objects/Host_Application_Response__c/fields/Current_Application_Response__c.field-meta.xml
<CustomField>
    <fullName>Current_Application_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ตัวที่ใช้ล่าสุด</description>
    <label>Current Application Response</label>
    <type>Checkbox</type>
</CustomField>