force-app/main/default/objects/Host_Application_Response__c/fields/Front_End_App_Status__c.field-meta.xml
<CustomField>
    <fullName>Front_End_App_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Front End App Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>