force-app/main/default/objects/Host_Application_Response__c/fields/Host_App_Stage__c.field-meta.xml
<CustomField>
    <fullName>Host_App_Stage__c</fullName>
    <description>SLOS App Stage and Description</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ขั้นตอนจากระบบอนุมัติสินเชื่อ</inlineHelpText>
    <label>Host App Stage</label>
    <length>75</length>
    <type>Text</type>
</CustomField>