force-app/main/default/objects/Host_Application_Response__c/fields/Host_App_Step__c.field-meta.xml
<CustomField>
    <fullName>Host_App_Step__c</fullName>
    <description>SLOS App Step and Description</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ขั้นตอนจากระบบอนุมัติสินเชื่อ</inlineHelpText>
    <label>Host App Step</label>
    <length>75</length>
    <type>Text</type>
</CustomField>