force-app/main/default/objects/Host_Application_Response__c/fields/Host_System__c.field-meta.xml
<CustomField>
    <fullName>Host_System__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ชื่อระบบขออนุมัติสินเชื่อ</inlineHelpText>
    <label>Host System</label>
    <length>10</length>
    <type>Text</type>
</CustomField>