force-app/main/default/objects/Host_Application_Response__c/fields/Old_App_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>Old_App_Ref_Number__c</fullName>
    <description>Original CA Reference to Appeal CA</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>หมายเลขอ้างอิงเดิม (กรณี Appeal)</inlineHelpText>
    <label>Old App Ref Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>