force-app/main/default/objects/Host_Application_Response__c/fields/Opp_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opp_Stage__c</fullName>
    <description>Mapped Opportunity Stage after SLOS returns App Stage, App Step and App Status</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>สถานะของ Opportunity</inlineHelpText>
    <label>Opp Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>