force-app/main/default/objects/Host_Application_Response__c/fields/Post_Approval_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_Approval_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>วันที่สิ้นสุดของขั้นตอน Post_Approval</inlineHelpText>
    <label>Post Approval End Date</label>
    <type>Date</type>
</CustomField>