force-app/main/default/objects/Host_Application_Response__c/fields/Post_Approval_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_Approval_Start_Date__c</fullName>
    <description>Date stamp for post approval from SLOS</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>วันที่เริ่มต้นของขั้นตอน Post_Approval</inlineHelpText>
    <label>Post Approval Start Date</label>
    <type>Date</type>
</CustomField>