force-app/main/default/objects/Host_Application_Response__c/fields/Setup_Date__c.field-meta.xml
<CustomField>
    <fullName>Setup_Date__c</fullName>
    <description>Date stamp when product is set up at backedn</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>วันที่ตั้งวงเงิน</inlineHelpText>
    <label>Setup Date</label>
    <type>Date</type>
</CustomField>